[gd_scene load_steps=9 format=3 uid="uid://bdnk24gaunyls"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_ed0cq"]
[ext_resource type="Texture2D" uid="uid://ccxpaftyogjw3" path="res://assets/textures/bg.png" id="1_rd5y7"]
[ext_resource type="PackedScene" uid="uid://cxpm728kx3rx7" path="res://scenes/player.tscn" id="2_2dvl5"]
[ext_resource type="PackedScene" uid="uid://b8u4vls87g7dp" path="res://scenes/hud.tscn" id="2_161lk"]
[ext_resource type="PackedScene" uid="uid://ce24o841tqcp5" path="res://scenes/enemy_spawner.tscn" id="3_egqx7"]
[ext_resource type="AudioStream" uid="uid://c1voidvyn08w8" path="res://assets/audio/hit.wav" id="6_05oyf"]
[ext_resource type="AudioStream" uid="uid://djf4ioqkb4w1v" path="res://assets/audio/explode.wav" id="7_ii1pc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_usqoa"]
size = Vector2(161.5, 775.5)

[node name="Game" type="Node2D"]
script = ExtResource("1_ed0cq")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("2_161lk")]

[node name="Background" type="TextureRect" parent="."]
offset_right = 1280.0
offset_bottom = 778.0
texture = ExtResource("1_rd5y7")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("2_2dvl5")]
position = Vector2(92, 415)

[node name="EnemySpawner" parent="." instance=ExtResource("3_egqx7")]

[node name="DeathZone" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone"]
position = Vector2(-224, 387)
shape = SubResource("RectangleShape2D_usqoa")

[node name="EnemyHitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_05oyf")

[node name="PlayerDamagedSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_ii1pc")

[connection signal="took_damage" from="Player" to="." method="_on_player_took_damage"]
[connection signal="enemy_spawned" from="EnemySpawner" to="." method="_on_enemy_spawner_enemy_spawned"]
[connection signal="path_enemy_spawned" from="EnemySpawner" to="." method="_on_enemy_spawner_path_enemy_spawned"]
[connection signal="area_entered" from="DeathZone" to="." method="_on_death_zone_area_entered"]
